--- a/404.html
+++ b/404.html
@@ -6,6 +6,8 @@
 	      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>404 error</title>
+
+	<meta name="darkreader-lock">
 	<link rel="stylesheet" href="src/css/global.css">
 	<link rel="stylesheet" href="src/css/style-404.css">
 
