--- a/contact.html
+++ b/contact.html
@@ -20,6 +20,8 @@
 	<meta property="og:locale" content="en_US">
 	<meta property="og:locale:alternate" content="pl_PL">
 	<title>Contact info</title>
+
+	<meta name="darkreader-lock">
 	<link rel="stylesheet" href="src/css/style-contact.css">
 	<link rel="stylesheet" href="src/css/global.css">
 	<script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
