make some changes, maybe I will do rewrite soon
Took 1 minute

Took 29 minutes

--- a/space.html
+++ b/space.html
@@ -24,6 +24,8 @@
 	<meta name="darkreader-lock">
 	<link rel="stylesheet" href="src/css/style.css">
 	<link rel="stylesheet" href="src/css/global.css">
+	<link rel="stylesheet" href="src/css/background.css">
+
 	<script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 	<link rel="shortcut icon" href="https://cdn.deandark.me/DeanDarkOdznaka.png" type="image/x-icon">
 </head>
