--- a/contact.html
+++ b/contact.html
@@ -24,6 +24,8 @@
 	<meta name="darkreader-lock">
 	<link rel="stylesheet" href="src/css/style-contact.css">
 	<link rel="stylesheet" href="src/css/global.css">
+	<link rel="stylesheet" href="src/css/background.css">
+
 	<script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 	<link rel="shortcut icon" href="https://cdn.deandark.me/DeanDarkOdznaka.png" type="image/x-icon">
 </head>
@@ -48,7 +50,7 @@
 			deandark
 		</a>
 		<a href="https://deandark.me/discord" class="button-with-icon" target="_blank">
-			<img src="https://cdn.deandark.me/LogoWhite.svg" class="icon">
+			<img src="https://cdn.deandark.me/LogoWhite.svg" class="icon" alt="DeanDark's Logo">
 			DeanDark's Corner
 		</a>
 
