--- a/index.html
+++ b/index.html
@@ -24,21 +24,24 @@
     <meta name="darkreader-lock">
     <link rel="stylesheet" href="src/css/style.css">
     <link rel="stylesheet" href="src/css/global.css">
+    <link rel="stylesheet" href="src/css/background.css">
+
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <link rel="shortcut icon" href="https://cdn.deandark.me/DeanDarkOdznaka.png" type="image/x-icon">
 </head>
 <body>
 <div id="particles-js"></div>
 <div class="content">
-    <h1>
-       <b> DeanDark </b>
-
+    <main>
+        <h1>
+           <b> DeanDark </b>
+        </h1>
         <p>
             <b>Designer, Junior Developer, Programmer, and more!</b>
+            <br>
+            I will make rewrite of this site soon™
         </p>
-
-    </h1>
-
+    </main>
 
     <div class="links">
         <a href="./about">
@@ -54,8 +57,8 @@
         </a>
     </div>
     <div class="links_c2">
-        <a href="./projects">
-            Projects (Soon™)
+        <a href="https://deandark.me/working/">
+            Projects (temp)
         </a>
     </div>
 </div>
