--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
                     </p>
                 </div>
 
-                <span class="old-tv-effect">
+                <div class="old-tv-effect">
                     <h1>DeanDark</h1>
                     <p>Welcome on DeanDark's WebSite!</p>
                     <p>Here you can find all of my projects, learn more about me and contact me.</p>
-                </span>
+                </div>
             </div>
         </section>
 
