--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
     </header>
     <main>
         <section id="introduce">
-            <div class="screen">
+            <div class="screen noise-animate">
+                <canvas id="noise" class="noise noise-animate"></canvas>
                 <div class="s-communicat">
                     <p>
                         Sorry, We're having trouble with connection.
@@ -84,9 +85,15 @@
                 </div>
 
                 <div class="old-tv-effect">
-                    <h1>DeanDark</h1>
-                    <p>Welcome on DeanDark's WebSite!</p>
-                    <p>Here you can find all of my projects, learn more about me and contact me.</p>
+                    <h1>
+                        DeanDark
+                    </h1>
+                    <p>
+                        Welcome on DeanDark's WebSite!
+                    </p>
+                    <p>
+                        Here you can find all of my projects, learn more about me and contact me.
+                    </p>
                 </div>
             </div>
         </section>
@@ -192,5 +199,6 @@
     </footer>
 </div>
 
+<script src="src/js/noise.js"></script>
 </body>
 </html>
