--- a/index.html
+++ b/index.html
@@ -135,22 +135,22 @@
             <div id="projects-content">
 
                 <p class="project">
-                    <iframe src="https://pretty-design.vercel.app" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+                    <iframe src="https://pretty-design.vercel.app" allowtransparency="true" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
                     <a href="https://pretty-design.vercel.app" target="_blank">Pretty Design</a> - A website with free to use design.
                 </p>
 
                 <p class="project">
-                    <iframe src="https://netykieta.vercel.app" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+                    <iframe src="https://netykieta.vercel.app" allowtransparency="true" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
                     <a href="https://etykieta.vercel.app" target="_blank">Netykieta</a> - A website with rules for the internet in Polish.
                 </p>
 
                 <p class="project">
-                    <iframe src="https://deandark.me/working" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+                    <iframe src="https://deandark.me/working" allowtransparency="true" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
                     <a href="https://deandark.me/working" target="_blank">My Working Site</a> - A website with text that im working at this website.
                 </p>
 
                 <p class="project">
-                    <iframe src="https://vexservice.pro" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+                    <iframe src="https://vexservice.pro" allowtransparency="true" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
                     <a href="https://vexservice.pro/" target="_blank">VexService</a> - A website for a small IoT polish service.
                 </p>
 
