🐈 change one project in projects 🐈
Took 10 minutes

Took 23 seconds

--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
                 </p>
 
                 <p class="project">
-                    <iframe src="https://deandark.me/working" allowtransparency="true" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
-                    <a href="https://deandark.me/working" target="_blank">My Working Site</a> - A website with text that im working at this website.
+                    <iframe src="https://deandark.me/space" allowtransparency="true" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+                    <a href="https://deandark.me/space" target="_blank">My Space</a> - A website quotes about space and life.
                 </p>
 
                 <p class="project">
