--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="#about">About</a></li>
-                    <li><a href="#projects">Projects</a></li>
+<!--                    <li><a href="#projects">Projects</a></li>-->
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
@@ -68,7 +68,7 @@
                 <div class="dropdown-content">
                     <a href="#">Home</a>
                     <a href="#about">About</a>
-                    <a href="#projects">Projects</a>
+<!--                    <a href="#projects">Projects</a>-->
                     <a href="#contact">Contact</a>
                 </div>
             </div>
@@ -127,35 +127,35 @@
             </div>
         </section>
 
-        <section id="projects">
-            <h3>Projects</h3>
-            <p class="fw600 bigger-text">
-                Here are some of my projects.
-            </p>
-            <div id="projects-content">
+<!--        <section id="projects">-->
+<!--            <h3>Projects</h3>-->
+<!--            <p class="fw600 bigger-text">-->
+<!--                Here are some of my projects.-->
+<!--            </p>-->
+<!--            <div id="projects-content">-->
 
-                <p class="project">
-                    <iframe src="https://pretty-design.vercel.app" allowtransparency="true" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
-                    <a href="https://pretty-design.vercel.app" target="_blank">Pretty Design</a> - A website with free to use design.
-                </p>
+<!--                <p class="project">-->
+<!--                    <iframe src="https://pretty-design.vercel.app" allowtransparency="true" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>-->
+<!--                    <a href="https://pretty-design.vercel.app" target="_blank">Pretty Design</a> - A website with free to use design.-->
+<!--                </p>-->
 
-                <p class="project">
-                    <iframe src="https://netykieta.vercel.app" allowtransparency="true" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
-                    <a href="https://etykieta.vercel.app" target="_blank">Netykieta</a> - A website with rules for the internet in Polish.
-                </p>
+<!--                <p class="project">-->
+<!--                    <iframe src="https://netykieta.vercel.app" allowtransparency="true" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>-->
+<!--                    <a href="https://etykieta.vercel.app" target="_blank">Netykieta</a> - A website with rules for the internet in Polish.-->
+<!--                </p>-->
 
-                <p class="project">
-                    <iframe src="https://deandark.me/working" allowtransparency="true" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
-                    <a href="https://deandark.me/working" target="_blank">My Working Site</a> - A website with text that im working at this website.
-                </p>
+<!--                <p class="project">-->
+<!--                    <iframe src="https://deandark.me/space" allowtransparency="true" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>-->
+<!--                    <a href="https://deandark.me/space" target="_blank">My Space</a> - A website quotes about space and life.-->
+<!--                </p>-->
 
-                <p class="project">
-                    <iframe src="https://vexservice.pro" allowtransparency="true" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
-                    <a href="https://vexservice.pro/" target="_blank">VexService</a> - A website for a small IoT polish service.
-                </p>
+<!--                <p class="project">-->
+<!--                    <iframe src="https://vexservice.pro" allowtransparency="true" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>-->
+<!--                    <a href="https://vexservice.pro/" target="_blank">VexService</a> - A website for a small IoT polish service.-->
+<!--                </p>-->
 
-            </div>
-        </section>
+<!--            </div>-->
+<!--        </section>-->
 
         <section id="contact">
             <h4>Contact</h4>
