--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="#about">About</a></li>
-<!--                    <li><a href="#projects">Projects</a></li>-->
+                    <li><a href="#projects">Projects</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
@@ -68,7 +68,7 @@
                 <div class="dropdown-content">
                     <a href="#">Home</a>
                     <a href="#about">About</a>
-<!--                    <a href="#projects">Projects</a>-->
+                    <a href="#projects">Projects</a>
                     <a href="#contact">Contact</a>
                 </div>
             </div>
