--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
 </head>
 <body>
 
+<script src="src/js/dropdown.js"></script>
+
 <div class="content">
     <header>
         <div class="h-left">
@@ -58,7 +60,7 @@
         </div>
         <div class="h-right">
             <div class="dropdown">
-                <button class="dropdown-button">
+                <button class="dropdown-button" onclick="toggleDropdown()">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                         <line x1="3" y1="12" x2="21" y2="12"></line>
                         <line x1="3" y1="6" x2="21" y2="6"></line>
