get rid of iframes
Took 13 minutes

--- a/index.html
+++ b/index.html
@@ -137,22 +137,22 @@
             <div id="projects-content">
 
                 <p class="project">
-                    <iframe src="https://pretty-design.vercel.app" allowtransparency="true" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+                    <img src="src/images/PrettyDesign.png" alt='Pretty Design free to use'>
                     <a href="https://pretty-design.vercel.app" target="_blank">Pretty Design</a> - A website with free to use design.
                 </p>
 
                 <p class="project">
-                    <iframe src="https://netykieta.vercel.app" allowtransparency="true" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+                    <img src="src/images/Netykieta.png" alt='Polish page named "Netykieta"'>
                     <a href="https://etykieta.vercel.app" target="_blank">Netykieta</a> - A website with rules for the internet in Polish.
                 </p>
 
                 <p class="project">
-                    <iframe src="https://deandark.me/space" allowtransparency="true" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+                    <img src="src/images/DeanDarkSpace.png" alt='Space quotes'>
                     <a href="https://deandark.me/space" target="_blank">My Space</a> - A website quotes about space and life.
                 </p>
 
                 <p class="project">
-                    <iframe src="https://vexservice.pro" allowtransparency="true" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+                    <img src="src/images/VexService.png" alt='VexService'>
                     <a href="https://vexservice.pro/" target="_blank">VexService</a> - A website for a small IoT polish service.
                 </p>
 
