--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 </p>
 
                 <p class="project">
-                    <img src="src/images/Netykieta.png" alt='Polish page named "Netykieta"'>
+                    <img src="src/images/netykieta.png" alt='Netykieta'>
                     <a href="https://etykieta.vercel.app" target="_blank">Netykieta</a> - A website with rules for the internet in Polish.
                 </p>
 
