--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
                 <p class="project">
                     <img src="src/images/netykieta.png" alt='Netykieta'>
-                    <a href="https://etykieta.vercel.app" target="_blank">Netykieta</a> - A website with rules for the internet in Polish.
+                    <a href="https://netykieta.vercel.app" target="_blank">Netykieta</a> - A website with rules for the internet in Polish.
                 </p>
 
                 <p class="project">
