--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 </p>
 
                 <p>
-                    I try to learn as much as possible of the things I like, but I don't like to force myself to do this learning. For me, to learn something well, there is a desire to learn it. In the same way, something must not be done by force. And I really like to help others, so I try my best to fulfill my duties to help on the server support <a href=“https://startit.bot/” target=“_blank”>Discord Bot StartIT</a>.
+                    I try to learn as much as possible of the things I like, but I don't like to force myself to do this learning. For me, to learn something well, there is a desire to learn it. In the same way, something must not be done by force. And I really like to help others, so I try my best to fulfill my duties to help on the server support <a href='https://startit.bot/' target='_blank'>Discord Bot StartIT</a>.
                 </p>
             </div>
         </section>
@@ -143,7 +143,7 @@
 
                 <p class="project">
                     <img src="src/images/netykieta.png" alt='Netykieta'>
-                    <a href="https://etykieta.vercel.app" target="_blank">Netykieta</a> - A website with rules for the internet in Polish.
+                    <a href="https://netykieta.vercel.app" target="_blank">Netykieta</a> - A website with rules for the internet in Polish.
                 </p>
 
                 <p class="project">
