added discord server to website
Took 18 minutes

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 </p>
 
                 <p>
-                    I try to learn as much as possible of the things I like, but I don't like to force myself to do this learning. For me, to learn something well, there is a desire to learn it. In the same way, something must not be done by force. And I really like to help others, so I try my best to fulfill my duties to help on the server support <a href='https://startit.bot/' target='_blank'>Discord Bot StartIT</a>.
+                    I try to learn as much as possible of the things I like, but I don't like to force myself to do this learning. For me, to learn something well, there is a desire to learn it. In the same way, something must not be done by force. And I really like to help others, so I try my best to fulfill my duties to help on the server support <a href=“https://startit.bot/” target=“_blank”>Discord Bot StartIT</a>.
                 </p>
             </div>
         </section>
@@ -143,7 +143,7 @@
 
                 <p class="project">
                     <img src="src/images/netykieta.png" alt='Netykieta'>
-                    <a href="https://netykieta.vercel.app" target="_blank">Netykieta</a> - A website with rules for the internet in Polish.
+                    <a href="https://etykieta.vercel.app" target="_blank">Netykieta</a> - A website with rules for the internet in Polish.
                 </p>
 
                 <p class="project">
@@ -174,13 +174,23 @@
 
                     <a href="https://discord.com/users/328161853211541506">@deandark</a>
                 </p>
+                <p id="server">
+                    <svg aria-hidden="true" role="img" xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="none" viewBox="0 0 24 24">
+                        <path fill="currentColor" d="M19.73 4.87a18.2 18.2 0 0 0-4.6-1.44c-.21.4-.4.8-.58 1.21-1.69-.25-3.4-.25-5.1 0-.18-.41-.37-.82-.59-1.2-1.6.27-3.14.75-4.6 1.43A19.04 19.04 0 0 0 .96 17.7a18.43 18.43 0 0 0 5.63 2.87c.46-.62.86-1.28 1.2-1.98-.65-.25-1.29-.55-1.9-.92.17-.12.32-.24.47-.37 3.58 1.7 7.7 1.7 11.28 0l.46.37c-.6.36-1.25.67-1.9.92.35.7.75 1.35 1.2 1.98 2.03-.63 3.94-1.6 5.64-2.87.47-4.87-.78-9.09-3.3-12.83ZM8.3 15.12c-1.1 0-2-1.02-2-2.27 0-1.24.88-2.26 2-2.26s2.02 1.02 2 2.26c0 1.25-.89 2.27-2 2.27Zm7.4 0c-1.1 0-2-1.02-2-2.27 0-1.24.88-2.26 2-2.26s2.02 1.02 2 2.26c0 1.25-.88 2.27-2 2.27Z" class="">
+
+                        </path>
+                    </svg>
+
+                    <a href="https://deandark.me/discord" target="_blank">DeanDark's Corner</a>
+                </p>
+
                 <p id="mail">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                         <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path>
                         <polyline points="22,6 12,13 2,6"></polyline>
                     </svg>
 
-                    <a href="mailto:contact@deandark.me"> contact@deandark.me </a>
+                    <a href="mailto:contact@deandark.me" target="_blank"> contact@deandark.me </a>
                 </p>
 
                 <p id="telegram">
@@ -188,7 +198,7 @@
                         <path fill-rule="evenodd" clip-rule="evenodd" d="M7.24253 15.8312C11.9069 13.799 15.0171 12.4593 16.5734 11.812C21.0167 9.96384 21.94 9.64279 22.5418 9.63219C22.6742 9.62986 22.9701 9.66266 23.1618 9.81821C23.3237 9.94956 23.3682 10.127 23.3895 10.2515C23.4109 10.376 23.4374 10.6597 23.4163 10.8814C23.1755 13.4114 22.1336 19.5509 21.6036 22.3846C21.3793 23.5836 20.9377 23.9856 20.5101 24.0249C19.581 24.1104 18.8754 23.4109 17.9755 22.821C16.5673 21.8979 15.7717 21.3232 14.4048 20.4225C12.8251 19.3815 13.8492 18.8093 14.7494 17.8743C14.985 17.6296 19.0789 13.9059 19.1581 13.5681C19.168 13.5258 19.1772 13.3684 19.0837 13.2852C18.9901 13.2021 18.8521 13.2305 18.7524 13.2531C18.6112 13.2852 16.3615 14.7721 12.0035 17.7139C11.365 18.1523 10.7866 18.366 10.2684 18.3548C9.69711 18.3424 8.59819 18.0318 7.78125 17.7662C6.77925 17.4405 5.98288 17.2683 6.05223 16.7152C6.08835 16.427 6.48512 16.1324 7.24253 15.8312Z">
                     </path>
                     </svg>
-                    <a href="https://t.me/D3anDark">@D3anDark</a>
+                    <a href="https://t.me/D3anDark" target="_blank">@D3anDark</a>
                 </p>
             </div>
         </section>
