--- a/index.html
+++ b/index.html
@@ -108,23 +108,23 @@
                 </p>
 
                 <p>
-                    For example, I really like astrophysics, geopolitics, and programming. I learned to program when I was about 10 years old. And I know HTML, CSS, Python, C#, and SQL.
+                    For example, I really like astrophysics, geopolitics, and programming. I learned to program when I was about 10 years old. I know HTML, CSS, Python, C# and SQL
                 </p>
 
                 <p>
-                    For a while now, I've also been learning JavaScript and React, but I don't feel too learned in them yet. Especially because I don't have a lot of ideas on how to learn them, because I don't know what to do in them.
+                    For a while now, I've also been learning JavaScript and React, but I don't feel very proficient in them yet. Mainly because I don't have many ideas how to learn them, because I don't know what to do with them.
                 </p>
 
                 <p>
-                    I'm very fond of music, and I plan to learn to play a few instruments. For example, such as piano or guitar, and a few others.
+                    I'm very fond of music, and I plan to learn to play some instruments. Like piano or guitar and some others.
                 </p>
 
                 <p>
-                    And I like to play computer games, but lately I neither have the desire nor the time. And such games that I mainly play are: Stardew Valley, Euro Truck Simulator 2, Overwatch 2, Minecraft etc.
+                    And I like to play computer games, but lately I have neither the desire nor the time. And such games I mainly play are: Stardew Valley, Euro Truck Simulator 2, Overwatch 2, Minecraft, etc.
                 </p>
 
                 <p>
-                    I try to learn as much as possible of the things I like, but I don't like to force myself to do this learning. For me, to learn something well, there is a desire to learn it. In the same way, something must not be done by force. And I really like to help others, so I try my best to fulfill my duties to help on the server support <a href=“https://startit.bot/” target=“_blank”>Discord Bot StartIT</a>.
+                    I try to learn as much as I can about the things I like, but I don't like to force myself to learn. For me, to learn something well, there must be a desire to learn it. In the same way, something must not be done by force. And I really like to help others, so I try my best to fulfill my duties to help on the server support of <a href=“https://startit.bot/” target=“_blank”>Discord Bot StartIT</a>.
                 </p>
             </div>
         </section>
