Change redirect URL in discord.html to Horyzont Zdażeń
Updated the redirect URL in the script tag.

--- a/discord.html
+++ b/discord.html
@@ -18,6 +18,7 @@
 	<title>DeanDark</title>
 </head>
 <script>
-    window.location.href = 'https://discord.gg/F58wmJJsN7';
+    window.location.href = 'https://discord.gg/hzd';
 </script>
 </html>
+
